1999-02-04  Harri Porten  <porten@kde.org>

	* main.cpp: remove stale pidfile before creating new the
	one. Otherwise creation with O_EXCL fails.
	* runtests.cpp: removed securityTest(). $HOME check wasn't fully
	functional and not needed anymore.
	* runtests.cpp: re-enabled test for pppd's s-bit if eff. uid != 0.

1999-02-03  Mario Weilguni <mweilguni@kde.org>

	* fixed a bug in my testing code

1999-02-02  Mario Weilguni <mweilguni@kde.org>

	* the value of the environment var $HOME is no longer trusted,
	  kppp now uses getpwent() to find out the home directory.

	* the pidfile is now created with O_EXCL

	* added new portugal rules

	* executable accounting rulesets are now disabled (will re-enable
	  after KDE 1.1)

	* fixed a bug that caused the throughput graph display
          unreasonable high numbers

1999-01-31  Mario Weilguni <mweilguni@kde.org>

	* fixed a security bug (stdout or stderr closed on program start)

1999-01-28  Mario Weilguni <mweilguni@kde.org>

	* fixed a bug in opener.cpp. recvmsg() was interrupted, and thus
	the SUID part died.

1999-01-28  Harri Porten  <porten@kde.org>

	* modem.cpp: use sigsetjmp() instead of just setjmp() to solve
	freeze when modem is powered off (bug#267)

1999-01-27  Harri Porten  <porten@kde.org>

	* pppstats.cpp: removed debug output
	* opener.cpp: delay closing the tty fd. Otherwise the ioctl() in
	execpppd() can't succeed.
	* opener.cpp: ignore TERM and INT signals. This is probably the
	best until a safe clean-up & terminate routine is written.
	* connect.cpp: added a removedns() call to cancelbutton().

1999-01-25  Mario Weilguni <mweilguni@kde.org>

	* updated and regenerated documentation
	
1999-01-23  Harri Porten  <porten@kde.org>

	* main.cpp: config data wasn't saved on immediate exit.

1999-01-22  Harri Porten  <porten@kde.org>

	* moved pppd call to the server process. It should be safer and
	much more comfortable that pppd doesn't need to be installed SUID