@@ -27,61 +27,9 @@
 #include "pppdata.h"
 #include "runtests.h"
 #include "kpppconfig.h"
+#include "devices.h"
 
-
-QString findFileInPath( const char *fname, const char *extraPath) {
-  QString f;
-
-  if(access(fname, F_OK) == 0)
-    return QString(fname);
-
-  // strip arguments
-  QString _fname = fname;
-  if(_fname.find(' ') != -1)
-    _fname = _fname.left(_fname.find(' '));
-
-  int psize = 0;
-  if(extraPath != 0)
-    psize += strlen(extraPath);
-  if(getenv("PATH") != 0)
-    psize += strlen(getenv("PATH"));
-
-  // psize for the path, 2 for ":" and one zero byte
-  char *path = new char[psize+3];
-  if(!path) {
-    fprintf(stderr, "malloc failed!\n");
-    exit(1);
-  }
-  path[0] = 0;
-
-  if(extraPath != 0)
-    strcpy(path, extraPath);
-
-  // for absolute path
-  strcat(path, ":");
-
-  if(getenv("PATH") != 0) {
-    strcat(path, ":");
-    strcat(path, getenv("PATH"));
-  }
-
-  char *p = strtok(path, ":");
-  while(p != 0) {
-    f = p;
-    f += "/";
-    f += _fname;
-    if(access(f.data(), F_OK) == 0) {
-      delete path;
-      return f;
-    } else
-      p = strtok(0, ":");
-  }  
-
-  delete path;
-  f = "";
-  return f;
-}
-
+extern const char *pppdPath();
 
 PPPData gpppdata;
 
@@ -348,23 +296,7 @@ void PPPData::set_dock_into_panel(bool set) {
 
 
 const char* PPPData::pppdPath() {
-  static char *PPPDPATH = 0;
-
-  if(PPPDPATH == 0) {
-    QString s = findFileInPath(PPPDNAME, 
-			       PPPDSEARCHPATH);
-    PPPDPATH = new char[s.length() + 1];
-    if(PPPDPATH == 0) {
-      fprintf(stderr, "kppp: low memory\n");
-      exit(1);
-    }
-    
-    // safe to use strcpy here
-    strcpy(PPPDPATH, s.data());
-  }
-  
-  return PPPDPATH;
-
+  return ::pppdPath();
 }
 
 
@@ -379,11 +311,7 @@ void PPPData::setpppdTimeout(const char *n) {
 
 
 const char* PPPData::modemDevice() {
-#ifdef __FreeBSD__
-  return readConfig (MODEM_GRP, MODEMDEV_KEY, "/dev/cuaa0");
-#else
-  return readConfig (MODEM_GRP, MODEMDEV_KEY, "/dev/modem");
-#endif
+  return readConfig (MODEM_GRP, MODEMDEV_KEY, devices[DEV_DEFAULT]);
 }
 
 
