@@ -329,28 +329,6 @@ const char *getHomeDir() {
   return hd;
 }
 
-int securityTests() {
-  // Test 1: check whether $HOME is valid. The KDE and Qt libraries
-  //         rely on this variable and we don't want to allow anyone
-  //         to exploit kppp's setuid status.
-  /*
-  QString homedir = getHomeDir();
-  struct stat st;
-  int ok = false;
-  if(homedir.length() > 0)
-    if(stat(homedir.data(), &st) == 0)
-      if(S_ISDIR(st.st_mode) && st.st_uid == getuid())
-        ok = true;
-
-  if(!ok) {
-    fprintf(stderr, "kppp: ERROR: The HOME variable isn't set properly.\n"
-            "kppp: Please ask your system administrator to "
-            "correct its setting.\n\n");
-    return TEST_CRITICAL;
-  }
-  */
-  return TEST_OK;
-}
 
 int runTests() {
   int warning = 0;
@@ -414,25 +392,21 @@ int runTests() {
 #endif
 
   // Test 1: search the pppd binary
-  QString f = gpppdata.pppdPath();
-  bool pppdFound = FALSE;
-  if(access(f.data(), F_OK) == 0)
-    pppdFound = TRUE;
+  const char *f = gpppdata.pppdPath();
 
-  if(!pppdFound) {
+  if(!f) {
     QMessageBox::warning(0,
 		 i18n("Error"),
-		 i18n("Cannot find the pppd-daemon!\n\n"
-				    "Make sure that pppd is installed and\n"
-				    "you have entered the correct path.\n"
-				    ));
+		 i18n("Cannot find the PPP daemon!\n\n"
+                      "Make sure that pppd is installed and\n"
+                      "you have entered the correct path."));
     warning++;
   }
 
   // Test 2: check access to the pppd binary
-  if(pppdFound) {
+  if(f) {
 #if 0
-    if(access(f.data(), X_OK) != 0 /* && geteuid() != 0 */) {
+    if(access(f, X_OK) != 0 /* && geteuid() != 0 */) {
       QMessageBox::critical(0,
 		   i18n("Error"),
 		   i18n("You do not have the permission\n"
@@ -442,7 +416,7 @@ int runTests() {
       return TEST_CRITICAL;
     } else {
       struct stat st;
-      stat(f.data(), &st);
+      stat(f, &st);
       if((st.st_mode & S_ISUID) == 0 && getuid() != 0 ) {
 	QMessageBox::warning(0,
 		     i18n("Error"),
@@ -456,7 +430,7 @@ int runTests() {
 #endif
     if(euid != 0) {
       struct stat st;
-      stat(f.data(), &st);
+      stat(f, &st);
       if(st.st_uid != 0 || (st.st_mode & S_ISUID) == 0) {
 	QMessageBox::warning(0,
 		     i18n("Error"),
